# Xaver

./: .gitignore  Arena001.rsg  Cargo.toml  README.md
config/: config copy.json  config.json
images/: Icons.kra  icon.png~  save.png~
src/: main.rs  messages.rs  savemanager.rs  utils.rs  widgetmodules.rs  windowdisplay.rs
