[package]
name = "Xaver"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
filetime = "0.2.29"
iced = {version="0.14.0", features=["image"]}
memchr = "2.8.1"
os_info = "3.15.0"
rfd = "0.17.2"
serde = "1.0.228"
serde_json = "1.0.150"
whoami = "2.1.2"

[target.'cfg(target_os = "linux")'.dependencies]
users = "0.11.0"

[target.'cfg(target_os = "windows")'.dependencies]
whoami = "2.1.2"
